[gd_scene load_steps=3 format=3 uid="uid://dvgyqm01rsx33"]

[ext_resource type="Script" path="res://Scenes/Ui/PauseMenu.gd" id="1_b0ake"]
[ext_resource type="Texture2D" uid="uid://dty5nrwm5xtgg" path="res://Graphics/ui/Pxiel Art UI borders.png" id="2_83j15"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b0ake")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -157.5
offset_right = 127.0
offset_bottom = 157.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_83j15")

[node name="Menu" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -139.0
offset_right = 108.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Start" type="Button" parent="Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
text = "resume"
language = "English"

[node name="Options" type="Button" parent="Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "options"

[node name="Exit" type="Button" parent="Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
text = "exit_menu"

[node name="OptionsMenu" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -121.0
offset_right = 111.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="Button" parent="OptionsMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "video"

[node name="Audio" type="Button" parent="OptionsMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "audio"

[node name="BackFromOptions" type="Button" parent="OptionsMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "back
"

[node name="VideoMenu" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VideoMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.5
offset_top = -108.0
offset_right = 93.5
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2

[node name="Fullscreen" type="HBoxContainer" parent="VideoMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FullScreen" type="Label" parent="VideoMenu/VBoxContainer/Fullscreen"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "fullscreen"

[node name="FullscreenCheckbox" type="CheckBox" parent="VideoMenu/VBoxContainer/Fullscreen"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="Borderless" type="HBoxContainer" parent="VideoMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Borderless" type="Label" parent="VideoMenu/VBoxContainer/Borderless"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
text = "borderless
"

[node name="BorderlessCheckbox" type="CheckBox" parent="VideoMenu/VBoxContainer/Borderless"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="Vsync" type="HBoxContainer" parent="VideoMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSync" type="Label" parent="VideoMenu/VBoxContainer/Vsync"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "vsync
"

[node name="VSyncCheckbox" type="CheckBox" parent="VideoMenu/VBoxContainer/Vsync"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="BackFromVideo" type="Button" parent="VideoMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "back
"

[node name="AudioMenu" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -17.0
offset_top = -1.0
offset_right = -17.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="AudioMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -99.0
offset_right = 114.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2

[node name="Master" type="HBoxContainer" parent="AudioMenu/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="Master" type="Label" parent="AudioMenu/HBoxContainer/Master"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "master"

[node name="MasterBar" type="HSlider" parent="AudioMenu/HBoxContainer/Master"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../../Music/MusicBar")
value = 100.0

[node name="MasterBarLabel" type="Label" parent="AudioMenu/HBoxContainer/Master"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="Music" type="HBoxContainer" parent="AudioMenu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="Music" type="Label" parent="AudioMenu/HBoxContainer/Music"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "music"

[node name="MusicBar" type="HSlider" parent="AudioMenu/HBoxContainer/Music"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../Master/MasterBar")
focus_neighbor_bottom = NodePath("../../Sound FX/Sound FXBar")
value = 100.0

[node name="MusicBarLabel" type="Label" parent="AudioMenu/HBoxContainer/Music"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="Sound FX" type="HBoxContainer" parent="AudioMenu/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Sound FX" type="Label" parent="AudioMenu/HBoxContainer/Sound FX"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "sound FX"

[node name="Sound FXBar" type="HSlider" parent="AudioMenu/HBoxContainer/Sound FX"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
focus_neighbor_top = NodePath("../../Music/MusicBar")
focus_neighbor_bottom = NodePath("../../BackFromAudio")
value = 100.0

[node name="Sound FXBarLabel" type="Label" parent="AudioMenu/HBoxContainer/Sound FX"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="BackFromAudio" type="Button" parent="AudioMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "back
"

[connection signal="pressed" from="Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/BackFromOptions" to="." method="_on_back_from_options_pressed"]
[connection signal="toggled" from="VideoMenu/VBoxContainer/Fullscreen/FullscreenCheckbox" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="VideoMenu/VBoxContainer/Borderless/BorderlessCheckbox" to="." method="_on_borderless_toggled"]
[connection signal="toggled" from="VideoMenu/VBoxContainer/Vsync/VSyncCheckbox" to="." method="_on_v_sync_toggled"]
[connection signal="pressed" from="VideoMenu/VBoxContainer/BackFromVideo" to="." method="_on_back_from_video_pressed"]
[connection signal="value_changed" from="AudioMenu/HBoxContainer/Master/MasterBar" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="AudioMenu/HBoxContainer/Music/MusicBar" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="AudioMenu/HBoxContainer/Sound FX/Sound FXBar" to="." method="_on_sound_fx_value_changed"]
[connection signal="pressed" from="AudioMenu/HBoxContainer/BackFromAudio" to="." method="_on_back_from_audio_pressed"]
